--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,8 +55,7 @@ dev_dependencies:
 # The following section is specific to Flutter.
 flutter:
   assets:
-    - assets/images/block.png
-    - assets/images/background.png
+    - assets/images/
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
