--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,11 @@ dependencies:
   flame: ^1.1.0
   google_fonts: ^2.3.1
   fluttertoast: ^8.0.9
+  provider: ^6.0.2
+  firebase_core: ^1.14.1
+  firebase_analytics: ^9.1.5
+  firebase_auth: ^3.3.14
+  cloud_firestore: ^3.1.12
 
 
   # The following adds the Cupertino Icons font to your application.
